--- a/WebRTC/package.json
+++ b/WebRTC/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "description": "WebRTC Prototype",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "@types/node": "^14.0.20",
+    "@types/socket.io-client": "^1.4.33",
+    "common-js": "^0.3.8",
+    "socket.io-client": "^2.3.0"
+  },
   "devDependencies": {
     "@commitlint/config-conventional": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
