--- a/WebRTC/package.json
+++ b/WebRTC/package.json
@@ -2,12 +2,13 @@
   "name": "webrtc",
   "version": "1.0.0",
   "description": "WebRTC Prototype",
-  "main": "index.js",
+  "main": "index.html",
   "dependencies": {
     "@types/node": "^14.0.20",
     "@types/socket.io-client": "^1.4.33",
-    "common-js": "^0.3.8",
-    "socket.io-client": "^2.3.0"
+    "@types/webrtc": "^0.0.26",
+    "socket.io-client": "^2.3.0",
+    "webrtc-adapter": "^7.6.3"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^9.0.1",
