--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,10 @@ variables:
   RTC: "WebRTC"
   ELECTRON: "electron-react"
 
-cache:
-  paths:
-    - ./$RTC/node_modules
-    - ./$ELECTRON/node_modules
+  #cache:
+  #  paths:
+  #    - ./"$RTC"/node_modules
+  #    - ./"$ELECTRON"/node_modules
 
 before_script:  
   - apt-get update -qq && apt-get install
