--- a/WebRTC/package.json
+++ b/WebRTC/package.json
@@ -7,10 +7,12 @@
     "@types/node": "^14.0.20",
     "@types/socket.io-client": "^1.4.33",
     "common-js": "^0.3.8",
+    "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^9.0.1",
+    "@commitlint/cli": "^9.1.1",
+    "@commitlint/config-conventional": "^9.1.1",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "eslint": "^7.4.0",
