--- a/electron-vue/package.json
+++ b/electron-vue/package.json
@@ -13,6 +13,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "firebase": "^7.17.2",
     "vue": "^2.6.11",
