--- a/electron-vue/package.json
+++ b/electron-vue/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "firebase": "^7.17.2",
+    "firebaseui": "^4.6.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
