--- a/electron-vue/package.json
+++ b/electron-vue/package.json
@@ -15,8 +15,11 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.0.0",
     "firebase": "^7.17.2",
     "firebaseui": "^4.6.1",
+    "inversify": "^5.0.1",
+    "reflect-metadata": "^0.1.13",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
