--- a/electron-vue/package.json
+++ b/electron-vue/package.json
@@ -21,6 +21,7 @@
     "inversify": "^5.0.1",
     "reflect-metadata": "^0.1.13",
     "vue": "^2.6.11",
+    "vue-context": "^6.0.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
