--- a/electron-vue/package.json
+++ b/electron-vue/package.json
@@ -13,6 +13,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@tensorflow/tfjs": "^2.6.0",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "reflect-metadata": "^0.1.13",
