--- a/electron-vue/package.json
+++ b/electron-vue/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "@tensorflow/tfjs": "^2.6.0",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "reflect-metadata": "^0.1.13",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
     "vue-context": "^6.0.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
