--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
-  "eslint.validate": ["javascript", "typescript"],
-  "editor.formatOnSave": true
+  "eslint.validate": [
+    "javascript",
+    "typescript"
+  ],
+  "editor.formatOnSave": true,
+  "vetur.experimental.templateInterpolationService": false
 }
